more responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119193338-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-119193338-1');
+    </script> -->
+
+    <meta
+      property="og:description"
+      content="Online-Shop made with React JWT NODE REDUX MONGODB FIREBASE"
+    />
+    <meta
+      name="description"
+      content="Online-Shop made with React JWT NODE REDUX MONGODB FIREBASE"
+    />
+    <meta property="og:title" content="React Online-Shop " />
+    <meta property="og:image" content="" />
+    <!-- <meta
+      property="twitter:title"
+      content="Online-Shop made with React JWT NODE REDUX MONGODB FIREBASE"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/cyanharlow/purecss-character/main/card-preview.png"
+    />
+    <meta name="twitter:card" content="Online-Shop" /> -->
+
+    <meta name="author" content="Vincernzo Cannone" />
+    <meta
+      name="keywords"
+      content="Online-Shop, React, node.js,MongoDb, Firebase"
+    />
+  </head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
@@ -21,7 +58,6 @@
   </head>
 
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
