--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119193338-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -36,14 +42,6 @@
       name="keywords"
       content="Online-Shop, React, node.js,MongoDb, Firebase"
     />
-  </head>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -52,6 +50,9 @@
       * {
         margin: 0;
         font-family: "Urbanist", sans-serif;
+      }
+      body {
+        font-size: 62.5%;
       }
     </style>
     <title>React Online Shop</title>
