--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,9 @@
       * {
         margin: 0;
         font-family: "Urbanist", sans-serif;
+        box-sizing: border-box;
       }
-      body {
+      root {
         font-size: 62.5%;
       }
     </style>
